Impelementierung eines simplen Menü's der Konsolen App

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Implementierung/MusikschuleConsole/obj
 /Implementierung/.vs
 /Implementierung/MusikschuleConsole/.vs/MusikschuleConsole
+/Implementierung/MusikschuleConsole/.vs/ProjectEvaluation
+/Implementierung/MusikschuleConsole/bin/Debug/net9.0
